Raise incident via mail updates