@@ -208,7 +208,7 @@ public class MiscService {
                     rowWiseIssues.put(rowNo++, "User With Same Employee ID already Exist!");
                     continue;
                 }
-                user.setEmployeeId(data.get("EMP_ID").trim().equals("")? null : data.get("EMP_ID").trim());
+                user.setEmployeeId(data.get("EMP_ID").trim().equals("") ? null : data.get("EMP_ID").trim());
             }
             if (data.get("PROJECT_CODE") == null || data.get("PROJECT_CODE").trim().equals("")) {
                 user.setProjectCode(null);
@@ -337,7 +337,7 @@ public class MiscService {
                     rowWiseIssues.put(rowNo++, "Product Category Required!");
                     continue;
                 } else {
-                    module = moduleService.getModuleByCustomerModuleName(data.get("PRODUCT_CATEGORY").trim());
+                    module = moduleService.getModuleByCustomerModuleName(LicenseType.ASSET, data.get("PRODUCT_CATEGORY").trim());
                     if (module == null) {
                         rowWiseIssues.put(rowNo++, "Product Category not exist!");
                         continue;
@@ -540,6 +540,64 @@ public class MiscService {
         }
     }
 
+    @Transactional
+    @Async("asyncExecutor")
+    public void notifyIncidentCreationViaEmail(IncidentEmailVO incidentEmailVO) {
+        /*need data for email*/
+        List<com.centram.domain.Module> modules = new ArrayList<com.centram.domain.Module>();
+        modules.add(incidentEmailVO.getModuleCategory());
+        modules.add(incidentEmailVO.getModuleSubCategory());
+        String category = modules.stream().filter(i -> {
+            return i.getId().equals(incidentEmailVO.getModuleId());
+        }).findFirst().get().getName();
+        String subCategory = modules.stream().filter(i -> {
+            return i.getId().equals(incidentEmailVO.getSubModuleId());
+        }).findFirst().get().getName();
+        List<DistributionList> distributionLists = new ArrayList<DistributionList>();
+        List<String> dlEmails = new ArrayList<String>();
+        if (incidentEmailVO.getAgentEmail().equalsIgnoreCase("NA")) {
+            distributionLists = distributionListService.getByModuleIdAndSubModuleIdAndOrganisationId(incidentEmailVO.getModuleId(), incidentEmailVO.getSubModuleId(), incidentEmailVO.getOrganisationId());
+            dlEmails = distributionLists.stream().map(DistributionList::getDlEmail).collect(Collectors.toList());
+        }
+        List<UserVO> userVOS = userService.getUsersByRoles(Arrays.asList("ORG_INCIDENT_AGENT_LEAD", "ORG_INCIDENT_AGENT_MANAGER"));
+        if (dlEmails.size() > 0) {
+            incidentEmailVO.setMailSubjectKey("incNewDlSub");
+            incidentEmailVO.setMailBodyKey("incNewDlCnt");
+            incidentEmailVO.setMailToType("AGENT_DL");
+            incidentEmailVO.setTo(dlEmails.toArray(new String[0]));
+            incidentEmailVO.setCc(new String[]{});
+            incidentEmailVO.setBcc(new String[]{});
+            incidentEmailVO.setReplyTo(appReplyToEmail);
+            incidentEmailVO.setCategory(category);
+            incidentEmailVO.setSubCategory(subCategory);
+            incidentEmailVO.setUserVOS(userVOS);
+            incidentEmailVO.setRecipientName("Supportdesk");
+            incidentEmailVO.populateEscalationMatrices();
+            appEmailService.sendIncidentUpdateEmail(incidentEmailVO);
+        }
+        List<String> userEmails = new ArrayList<String>() {{
+            add(incidentEmailVO.getUserEmail());
+        }};
+        userEmails.addAll(!incidentEmailVO.getWatchList().equalsIgnoreCase("") ? Arrays.asList(incidentEmailVO.getWatchList().split(",")) : new ArrayList<String>());
+        List<UserVO> users = userService.getUsersByEmails(userEmails);
+        for (UserVO userVO : users) {
+            incidentEmailVO.setMailSubjectKey("incNewEmpSub");
+            incidentEmailVO.setMailBodyKey("incNewEmpCnt");
+            incidentEmailVO.setMailToType("EMP");
+            incidentEmailVO.setTo(new String[]{userVO.getEmail()});
+            incidentEmailVO.setCc(new String[]{});
+            incidentEmailVO.setBcc(new String[]{});
+            incidentEmailVO.setReplyTo(appReplyToEmail);
+            incidentEmailVO.setCategory(category);
+            incidentEmailVO.setSubCategory(subCategory);
+            incidentEmailVO.setUserVOS(userVOS);
+            incidentEmailVO.setRecipientName(userVO.getFullName());
+            incidentEmailVO.populateEscalationMatrices();
+            incidentEmailVO.setNotifications(Collections.singletonList(new Notification(null, null, new User(userVO.getVersion(), userVO.getId()), Status.PUSHED, NotificationType.INFO)));
+            appEmailService.sendIncidentUpdateEmail(incidentEmailVO);
+        }
+    }
+
     /**
      * notify user incident update via mail and notification
      *
@@ -560,7 +618,7 @@ public class MiscService {
         List<DistributionList> distributionLists = new ArrayList<DistributionList>();
         List<String> dlEmails = new ArrayList<String>();
         if (incidentEmailVO.getAgentEmail().equalsIgnoreCase("NA")) {
-            distributionLists = distributionListService.getByModuleIdAndSubModuleId(incidentEmailVO.getModuleId(), incidentEmailVO.getSubModuleId());
+            distributionLists = distributionListService.getByModuleIdAndSubModuleIdAndOrganisationId(incidentEmailVO.getModuleId(), incidentEmailVO.getSubModuleId(), incidentEmailVO.getOrganisationId());
             dlEmails = distributionLists.stream().map(DistributionList::getDlEmail).collect(Collectors.toList());
         }
         if (incidentEmailVO.getIncidentType() == LicenseType.INCIDENT) {
@@ -1226,7 +1284,7 @@ public class MiscService {
         mailValues.put("valid_to", organisation.getLicenseEnd().format(DateTimeFormatter.ofPattern(dateFormat)));
         UserVO userVO = userService.getUserById(loggedInUser.getUserId());
         mailValues.put("recipientType", "Site Admin");
-        mailValues.put("recipients", Arrays.asList(loggedInUser.getEmail()));
+        mailValues.put("recipients", Collections.singletonList(loggedInUser.getEmail()));
         mailValues.put("userToNotify", Collections.singletonList(userVO));
         appEmailService.organisationUpdate(mailValues, newEntity);
         if (!newEntity) {
@@ -1270,7 +1328,7 @@ public class MiscService {
     @Transactional
     @Async("asyncExecutor")
     public void assetWarrantyExpiration(Asset asset) {
-        List<UserVO> userVOS = userService.getUsersByRolesAndOrganisation(Arrays.asList("ORG_ASSET_ADMIN"), asset.getOrganisation().getId());
+        List<UserVO> userVOS = userService.getUsersByRolesAndOrganisation(List.of("ORG_ASSET_ADMIN"), asset.getOrganisation().getId());
         Map<String, Object> mailValues = new HashMap<String, Object>();
         mailValues.put("asset_no", asset.getSerialNo());
         mailValues.put("exp_date", asset.getWarrantyExpiredAt().format(DateTimeFormatter.ofPattern(dateFormat)));
@@ -1286,7 +1344,7 @@ public class MiscService {
     @Async("asyncExecutor")
     public void assetValidityExpiration(Incident incident) {
         UserVO userVO = new UserVO(incident.getRaisedUser());
-        List<UserVO> userVOS = Arrays.asList(userVO);
+        List<UserVO> userVOS = List.of(userVO);
         Map<String, Object> mailValues = new HashMap<String, Object>();
         mailValues.put("asset_no", incident.getAsset().getSerialNo());
         mailValues.put("exp_date", incident.getAssetValidity().format(DateTimeFormatter.ofPattern(dateFormat)));
@@ -1308,7 +1366,7 @@ public class MiscService {
             mailValues.put("valid_from", organisation.getLicenseStart().format(DateTimeFormatter.ofPattern(dateFormat)));
             mailValues.put("valid_to", organisation.getLicenseEnd().format(DateTimeFormatter.ofPattern(dateFormat)));
             mailValues.put("recipientType", "Organization Admin");
-            mailValues.put("recipients", Arrays.asList(userVO.getEmail()));
+            mailValues.put("recipients", Collections.singletonList(userVO.getEmail()));
             mailValues.put("userToNotify", Collections.singletonList(userVO));
             appEmailService.organisationUpdate(mailValues, true);
         }
@@ -1444,7 +1502,7 @@ public class MiscService {
         List<DistributionList> distributionLists = new ArrayList<DistributionList>();
         List<String> dlEmails = new ArrayList<String>();
         if (incidentEmailVO.getAgentEmail().equalsIgnoreCase("NA")) {
-            distributionLists = distributionListService.getByModuleIdAndSubModuleId(incidentEmailVO.getModuleId(), incidentEmailVO.getSubModuleId());
+            distributionLists = distributionListService.getByModuleIdAndSubModuleIdAndOrganisationId(incidentEmailVO.getModuleId(), incidentEmailVO.getSubModuleId(), incidentEmailVO.getOrganisationId());
             dlEmails = distributionLists.stream().map(DistributionList::getDlEmail).collect(Collectors.toList());
         }
         List<UserVO> userVOS = userService.getUsersByRoles(Arrays.asList("ORG_ASSET_AGENT_LEAD", "ORG_ASSET_AGENT_MANAGER"));
